syntax = "proto3";
package bitsgrap_tech_task;

service Proxy {
    rpc GetRT (Empty) returns (RecentTrade);
    rpc GetKL (Empty) returns (Kline);
}

message Empty {}

message RecentTrade {
    string tid = 1;           // id транзакции
    string pair = 2;          // название валютной пары
    string price = 3;         // цена транзакции
    string amount = 4;        // объём транзакции в базовой валюте
    string side = 5;          // как биржа засчитала сделку (buy/sell)
    int64 timestamp = 6;      // время UTC UnixNano
}

message Kline {
    string pair = 1;          // название пары в Bitsgap
    string time_frame = 2;    // период формирования свечи (1m, 1h, 1d)
    double o = 3;             // цена открытия
    double h = 4;             // максимальная цена
    double l = 5;             // минимальная цена
    double c = 6;             // цена закрытия
    int64 utc_begin = 7;      // время начала формирования свечи
    int64 utc_end = 8;        // время окончания формирования свечи
    VBS volume_bs = 9;        // объём торгов
}

message VBS {
    double buy_base = 1;      // объём покупок в базовой валюте
    double sell_base = 2;     // объём продаж в базовой валюте
    double buy_quote = 3;     // объём покупок в котируемой валюте
    double sell_quote = 4;    // объём продаж в котируемой валюте
}
